--- a/WeCrowd/Base.lproj/PaymentFlow.storyboard
+++ b/WeCrowd/Base.lproj/PaymentFlow.storyboard
@@ -18,15 +18,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swiper Status" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5cN-fJ-skt">
-                                <rect key="frame" x="16" y="254" width="568" height="29"/>
+                                <rect key="frame" x="16" y="172" width="568" height="29"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="aff-pR-Ufo">
-                                <rect key="frame" x="282" y="291" width="37" height="37"/>
-                                <color key="color" red="0.42745098040000001" green="0.74509803919999995" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
-                            </activityIndicatorView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QOE-Kh-Wj0">
                                 <rect key="frame" x="36" y="216" width="12" height="24"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
@@ -34,7 +30,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Donation Amount" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="w0T-Ke-GEe">
-                                <rect key="frame" x="56" y="216" width="508" height="30"/>
+                                <rect key="frame" x="56" y="213" width="508" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="134" id="Um0-Q5-JoP"/>
                                 </constraints>
@@ -47,40 +43,40 @@
                                 </variation>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GIa-eQ-G72">
-                                <rect key="frame" x="276" y="178" width="49" height="30"/>
+                                <rect key="frame" x="271" y="255" width="58" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Submit">
+                                    <color key="titleColor" red="0.42745098040000001" green="0.74509803919999995" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="submitAction:" destination="Nsw-6d-KCV" eventType="touchUpInside" id="gDp-tc-hnJ"/>
                                 </connections>
                             </button>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="aff-pR-Ufo">
+                                <rect key="frame" x="282" y="253" width="37" height="37"/>
+                                <color key="color" red="0.42745098040000001" green="0.74509803919999995" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="5cN-fJ-skt" firstAttribute="top" secondItem="QOE-Kh-Wj0" secondAttribute="bottom" constant="14" id="3NR-RA-Ugn"/>
                             <constraint firstItem="5cN-fJ-skt" firstAttribute="trailing" secondItem="Q7f-0A-JRq" secondAttribute="trailingMargin" id="6nD-2Q-3Ev"/>
-                            <constraint firstItem="w0T-Ke-GEe" firstAttribute="centerY" secondItem="QOE-Kh-Wj0" secondAttribute="centerY" constant="3" id="Baq-NN-ZvW"/>
                             <constraint firstItem="QOE-Kh-Wj0" firstAttribute="leading" secondItem="Q7f-0A-JRq" secondAttribute="leadingMargin" constant="20" id="Ltg-Um-No1"/>
-                            <constraint firstItem="5cN-fJ-skt" firstAttribute="top" secondItem="T0T-zz-vQr" secondAttribute="bottom" id="Who-hJ-SvS"/>
+                            <constraint firstAttribute="centerY" secondItem="w0T-Ke-GEe" secondAttribute="centerY" constant="72" id="OpY-BP-3AY"/>
+                            <constraint firstItem="GIa-eQ-G72" firstAttribute="top" secondItem="w0T-Ke-GEe" secondAttribute="bottom" constant="12" id="Uau-KM-eDg"/>
+                            <constraint firstItem="QOE-Kh-Wj0" firstAttribute="centerY" secondItem="w0T-Ke-GEe" secondAttribute="centerY" id="UvA-Qb-HCV"/>
                             <constraint firstItem="5cN-fJ-skt" firstAttribute="leading" secondItem="Q7f-0A-JRq" secondAttribute="leadingMargin" id="Xca-8e-xbZ"/>
-                            <constraint firstItem="aff-pR-Ufo" firstAttribute="top" secondItem="5cN-fJ-skt" secondAttribute="bottom" constant="8" id="aRK-XL-VnR"/>
-                            <constraint firstAttribute="centerX" secondItem="5cN-fJ-skt" secondAttribute="centerX" id="br5-US-dmi"/>
                             <constraint firstItem="w0T-Ke-GEe" firstAttribute="leading" secondItem="QOE-Kh-Wj0" secondAttribute="trailing" constant="8" id="cHh-GB-1jq"/>
-                            <constraint firstItem="GIa-eQ-G72" firstAttribute="top" secondItem="aff-pR-Ufo" secondAttribute="bottom" constant="8" id="gNg-oi-J3P"/>
+                            <constraint firstItem="GIa-eQ-G72" firstAttribute="centerY" secondItem="aff-pR-Ufo" secondAttribute="centerY" id="fof-tA-Aqv"/>
+                            <constraint firstAttribute="centerX" secondItem="GIa-eQ-G72" secondAttribute="centerX" id="g1k-0b-wmW"/>
                             <constraint firstAttribute="trailingMargin" secondItem="w0T-Ke-GEe" secondAttribute="trailing" constant="20" id="gUd-W1-Z8I"/>
-                            <constraint firstItem="aff-pR-Ufo" firstAttribute="centerX" secondItem="5cN-fJ-skt" secondAttribute="centerX" constant="0.5" id="lmw-WI-zbP"/>
-                            <constraint firstAttribute="centerY" secondItem="5cN-fJ-skt" secondAttribute="centerY" constant="32" id="oPs-i4-6qe"/>
-                            <constraint firstItem="w0T-Ke-GEe" firstAttribute="top" secondItem="GIa-eQ-G72" secondAttribute="bottom" constant="8" id="rCq-AD-eOy"/>
-                            <constraint firstItem="aff-pR-Ufo" firstAttribute="centerX" secondItem="GIa-eQ-G72" secondAttribute="centerX" id="vJx-M0-zfo"/>
-                            <constraint firstItem="GIa-eQ-G72" firstAttribute="top" secondItem="w0T-Ke-GEe" secondAttribute="bottom" constant="8" id="ySM-Ft-oa7"/>
+                            <constraint firstItem="GIa-eQ-G72" firstAttribute="centerX" secondItem="aff-pR-Ufo" secondAttribute="centerX" id="iAf-6G-IzD"/>
+                            <constraint firstItem="w0T-Ke-GEe" firstAttribute="top" secondItem="5cN-fJ-skt" secondAttribute="bottom" constant="12" id="t9S-NX-NdV"/>
+                            <constraint firstItem="aff-pR-Ufo" firstAttribute="top" secondItem="GIa-eQ-G72" secondAttribute="bottom" constant="8" id="zpH-Vb-vPO"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="Who-hJ-SvS"/>
-                                <exclude reference="br5-US-dmi"/>
-                                <exclude reference="gNg-oi-J3P"/>
-                                <exclude reference="ySM-Ft-oa7"/>
+                                <exclude reference="zpH-Vb-vPO"/>
                             </mask>
                         </variation>
                     </view>
@@ -113,16 +109,8 @@
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Donation Amount" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="51W-xJ-teu">
                                         <rect key="frame" x="28" y="5" width="500" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="134" id="BpG-hs-B4C"/>
-                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
-                                        <variation key="default">
-                                            <mask key="constraints">
-                                                <exclude reference="BpG-hs-B4C"/>
-                                            </mask>
-                                        </variation>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hSv-sr-fUc">
                                         <rect key="frame" x="8" y="8" width="12" height="24"/>
