--- a/WeCrowd/Base.lproj/PaymentFlow.storyboard
+++ b/WeCrowd/Base.lproj/PaymentFlow.storyboard
@@ -17,20 +17,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter a donation amount" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SvR-6H-qBO">
+                                <rect key="frame" x="120" y="28" width="361" height="32"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <color key="textColor" red="1" green="0.38665899170000001" blue="0.2383080414" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swiper Status" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5cN-fJ-skt">
-                                <rect key="frame" x="16" y="172" width="568" height="29"/>
+                                <rect key="frame" x="16" y="82" width="568" height="29"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="aff-pR-Ufo">
+                                <rect key="frame" x="282" y="163" width="37" height="37"/>
+                                <color key="color" red="0.42745098040000001" green="0.74509803919999995" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
+                            </activityIndicatorView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QOE-Kh-Wj0">
-                                <rect key="frame" x="36" y="216" width="12" height="24"/>
+                                <rect key="frame" x="36" y="126" width="12" height="24"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                 <color key="textColor" red="0.32944389029999999" green="0.80239898990000003" blue="0.3813414343" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Donation Amount" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="w0T-Ke-GEe">
-                                <rect key="frame" x="56" y="213" width="508" height="30"/>
+                                <rect key="frame" x="56" y="123" width="508" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="134" id="Um0-Q5-JoP"/>
                                 </constraints>
@@ -43,7 +53,7 @@
                                 </variation>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GIa-eQ-G72">
-                                <rect key="frame" x="271" y="255" width="58" height="34"/>
+                                <rect key="frame" x="271" y="165" width="58" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Submit">
                                     <color key="titleColor" red="0.42745098040000001" green="0.74509803919999995" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
@@ -53,16 +63,13 @@
                                     <action selector="submitAction:" destination="Nsw-6d-KCV" eventType="touchUpInside" id="gDp-tc-hnJ"/>
                                 </connections>
                             </button>
-                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="aff-pR-Ufo">
-                                <rect key="frame" x="282" y="253" width="37" height="37"/>
-                                <color key="color" red="0.42745098040000001" green="0.74509803919999995" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
-                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="5cN-fJ-skt" firstAttribute="trailing" secondItem="Q7f-0A-JRq" secondAttribute="trailingMargin" id="6nD-2Q-3Ev"/>
                             <constraint firstItem="QOE-Kh-Wj0" firstAttribute="leading" secondItem="Q7f-0A-JRq" secondAttribute="leadingMargin" constant="20" id="Ltg-Um-No1"/>
-                            <constraint firstAttribute="centerY" secondItem="w0T-Ke-GEe" secondAttribute="centerY" constant="72" id="OpY-BP-3AY"/>
+                            <constraint firstAttribute="centerY" secondItem="w0T-Ke-GEe" secondAttribute="centerY" constant="162" id="OpY-BP-3AY"/>
+                            <constraint firstItem="5cN-fJ-skt" firstAttribute="top" secondItem="SvR-6H-qBO" secondAttribute="bottom" constant="22" id="Oyb-Ju-WNu"/>
                             <constraint firstItem="GIa-eQ-G72" firstAttribute="top" secondItem="w0T-Ke-GEe" secondAttribute="bottom" constant="12" id="Uau-KM-eDg"/>
                             <constraint firstItem="QOE-Kh-Wj0" firstAttribute="centerY" secondItem="w0T-Ke-GEe" secondAttribute="centerY" id="UvA-Qb-HCV"/>
                             <constraint firstItem="5cN-fJ-skt" firstAttribute="leading" secondItem="Q7f-0A-JRq" secondAttribute="leadingMargin" id="Xca-8e-xbZ"/>
@@ -71,11 +78,14 @@
                             <constraint firstAttribute="centerX" secondItem="GIa-eQ-G72" secondAttribute="centerX" id="g1k-0b-wmW"/>
                             <constraint firstAttribute="trailingMargin" secondItem="w0T-Ke-GEe" secondAttribute="trailing" constant="20" id="gUd-W1-Z8I"/>
                             <constraint firstItem="GIa-eQ-G72" firstAttribute="centerX" secondItem="aff-pR-Ufo" secondAttribute="centerX" id="iAf-6G-IzD"/>
+                            <constraint firstAttribute="centerX" secondItem="SvR-6H-qBO" secondAttribute="centerX" id="qKq-Gv-LqX"/>
+                            <constraint firstItem="SvR-6H-qBO" firstAttribute="top" secondItem="T0T-zz-vQr" secondAttribute="bottom" constant="8" id="rPF-vw-hXt"/>
                             <constraint firstItem="w0T-Ke-GEe" firstAttribute="top" secondItem="5cN-fJ-skt" secondAttribute="bottom" constant="12" id="t9S-NX-NdV"/>
                             <constraint firstItem="aff-pR-Ufo" firstAttribute="top" secondItem="GIa-eQ-G72" secondAttribute="bottom" constant="8" id="zpH-Vb-vPO"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
+                                <exclude reference="OpY-BP-3AY"/>
                                 <exclude reference="zpH-Vb-vPO"/>
                             </mask>
                         </variation>
